# data-olympus

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  WHY.md  glama.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  spec_proposal.yml
.github/workflows/: ci.yaml  okf-pin-freshness.yml  pr-title-lint.yml  publish-pypi-reusable.yml  publish-pypi.yml  rc-publish.yml  release-image-reusable.yml  release-image.yml  set-channel.yml  tag-release.yml
.rules/: changelog-per-release.md  release-planning.md  release-rollback.md  release-routine.md  versioning.md
benchmarks/: README.md  __init__.py  ablate.py  chunking.py  corpus_gen.py  corpus_model.py  docs_tables.py  generate_artifacts.py  generate_embeddings_ablation.py  generate_governance_artifacts.py  governance_corpus.py  governance_queries.py  governance_queries.yaml  metrics.py  queries.yaml  query_gen.py  real_corpus_eval.md  real_corpus_eval.py  receipt.py  run.py  token_compact.py  tokenizer.py
benchmarks/corpus/decisions/: BENCH-AUTH-TOKENS-1.md  BENCH-AUTH-TOKENS-2.md  BENCH-AUTH-TOKENS-3.md  BENCH-AUTH-TOKENS-5.md  BENCH-AUTH-TOKENS-6.md  BENCH-AUTH-TOKENS-7.md  BENCH-AUTH-TOKENS-8.md  BENCH-AUTH-TOKENS.md  BENCH-CONFIG-RELOADING-1.md  BENCH-CONFIG-RELOADING-2.md  BENCH-CONFIG-RELOADING-3.md  BENCH-CONFIG-RELOADING-4.md  BENCH-CONFIG-RELOADING-5.md  BENCH-CONFIG-RELOADING-7.md  BENCH-CONFIG-RELOADING-8.md  BENCH-CONFIG-RELOADING.md  BENCH-IDEMPOTENCY-1.md  BENCH-IDEMPOTENCY-2.md  BENCH-IDEMPOTENCY-3.md  BENCH-IDEMPOTENCY-4.md  BENCH-IDEMPOTENCY-5.md  BENCH-IDEMPOTENCY-6.md  BENCH-IDEMPOTENCY-7.md  BENCH-IDEMPOTENCY-8.md  BENCH-IDEMPOTENCY.md  BENCH-MESSAGE-ORDERING-1.md  BENCH-MESSAGE-ORDERING-2.md  BENCH-MESSAGE-ORDERING-3.md  BENCH-MESSAGE-ORDERING-4.md  BENCH-MESSAGE-ORDERING-5.md  BENCH-MESSAGE-ORDERING-6.md  BENCH-MESSAGE-ORDERING-7.md  BENCH-MESSAGE-ORDERING-8.md  BENCH-MESSAGE-ORDERING.md  BENCH-NEW-AUTH-TOKENS-2.md  BENCH-NEW-AUTH-TOKENS-4.md  BENCH-NEW-AUTH-TOKENS-5.md  BENCH-NEW-CONFIG-RELOADING-6.md  BENCH-NEW-IDEMPOTENCY-4.md  BENCH-NEW-MESSAGE-ORDERING-8.md  (+22 more)
benchmarks/governance_results/: ablation.json  ablation.md
benchmarks/methods/: __init__.py  base.py  bm25.py  data_olympus.py  grep_read.py  vector_rag.py  whole_dump.py
benchmarks/real_corpus/: example_bundle_queries.json  example_bundle_result.json
benchmarks/results/: receipt.json  report.md  results.json
deploy/docker/: Dockerfile  compose.yaml  entrypoint.sh
deploy/k8s/: README.md  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.template.yaml  service.yaml  statefulset.yaml
deploy/k8s/read-replica/: README.md  (+6 more)
docs/: adoption.md  comparison.md  enforcement.md  glama.md  okf-profile.md  operations.md  quickstart.md  serving.md
docs/plans/: 2026-06-25-governance-retrieval-d1.md  2026-06-25-governance-retrieval-d2.md  2026-06-25-retrieval-benchmark-harness.md  2026-06-25-search-nl-query-fix.md  2026-06-25-status-type-filter.md
docs/releases/: README.md  pypi-trusted-publishing.md  v0.1.2.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.6.0-expanded-release-design.md  v0.6.0.md
docs/specs/: 2026-06-25-governance-retrieval-design.md  2026-06-25-retrieval-benchmark-design.md
example-bundle/: index.md  log.md  viz.html
example-bundle/decisions/: ADR-001-use-data-olympus.md  ADR-002-single-writer-serving.md  index.md
example-bundle/memory/: index.md
example-bundle/reference/: index.md  rest-api-endpoints.md
example-bundle/workflows/: WF-001-review-flow.md  index.md
scripts/: check_benchmark_docs.py  check_changelog.py  check_doc_consistency.py  check_version_free.py  ci_status.py  compute-version.sh  compute_release.py  deployed_digest.py  lint_pr_title.py  okf_conformance.py  rc_tag.py  release_artifacts.py  release_readiness.py  run-local.sh  security_alerts.py  should_tag.py  smoke_installed_wheel.py  version_free.py
src/data_olympus/: __init__.py  audit_log.py  audit_trailers.py  auth.py  config.py  cooccurrence.py  dedup.py  durable.py  embeddings.py  enforce_policy.py  git_ops.py  governed_lane.py  health.py  index.py  maintenance.py  markdown_parse.py  metrics.py  models.py  onboarding.py  onboarding_inflight.py  onboarding_playbook.py  pending.py  principals.py  prompts.py  push_queue.py  query_expansion.py  rate_limit.py  refresh.py  report.py  rest_api.py  safe_id.py  scaffold.py  search_gate.py  search_shortcut.py  server.py  session_metrics.py  setup_wizard.py  status_migrate.py  thin_pointer.py  tool_discovery.py  (+11 more)
tests/: conftest.py  test_acceptance_enforcement.py  test_audit_log.py  test_audit_trailers.py  test_auth.py  test_bench_ablate_smoke.py  test_bench_bootstrap_ci.py  test_bench_chunking.py  test_bench_corpus_deleak.py  test_bench_corpus_gen.py  test_bench_docs_drift.py  test_bench_governance_corpus.py  test_bench_governance_metrics.py  test_bench_governance_queries.py  test_bench_governance_strata.py  test_bench_methods.py  test_bench_metrics.py  test_bench_query_gen.py  test_bench_run_smoke.py  test_bench_status_aware_bm25.py  test_bench_tokenizer.py  test_benchmark_receipt.py  test_check_changelog.py  test_check_doc_consistency.py  test_check_version_free.py  test_ci_git_default_branch.py  test_ci_status.py  test_cli_errors.py  test_cli_index.py  test_cli_init.py  test_cli_lint.py  test_cli_report.py  test_cli_report_emit.py  test_cli_report_staged.py  test_cli_report_workspace.py  test_cli_validity_report.py  test_cli_verify.py  test_cli_visualize.py  test_compute_release.py  test_config.py  (+146 more)
tests/bats/: compute-version.bats  onboarding.bats
tests/cli-fixtures/: enforce-mock-server.py  get-stdu007.json  health-degraded.json  health-ok.json  list-t1-foundation.json  mock-server.py  search-worktree.json
tests/importer-fixtures/: .cursorrules  AGENTS-nested.md  CLAUDE.md
tests/okf/: reference.json
(+350 files in other folders)
