[project]
name = "data-olympus"
version = "0.1.0"
description = "Governance-grade knowledge-base format (OKF-compatible) plus CLI and single-writer MCP server"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "fastmcp>=3.2.0,<4",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]
bench = [
    "tiktoken>=0.8",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
data-olympus-mcp = "data_olympus.server:main"
data-olympus = "data_olympus.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_olympus"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG", "SIM", "TCH", "RET"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src", "."]
