[project]
name = "data-olympus"
version = "0.3.5"
description = "Governance-grade knowledge-base format (OKF-compatible) plus CLI and single-writer MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "knaisoma" }]
keywords = ["knowledge-base", "mcp", "okf", "governance", "rag", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "fastmcp>=3.2.0,<4",
    "pydantic>=2.9",
    # The secret-scanning gate (issue #71) runs operator-supplied
    # KB_SECRET_SCAN_EXTRA_PATTERNS through the `regex` engine because it
    # supports a hard match timeout: a catastrophic-backtracking pattern can
    # then never hang the single-writer critical path (stdlib `re` has no
    # timeout and cannot be interrupted once matching).
    "regex>=2024.5",
]

[project.urls]
Homepage = "https://github.com/knaisoma/data-olympus"
Repository = "https://github.com/knaisoma/data-olympus"
Issues = "https://github.com/knaisoma/data-olympus/issues"
Changelog = "https://github.com/knaisoma/data-olympus/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Optional local-embedding hybrid ranking (issue #42). NOT a core dependency:
# with this extra uninstalled and KB_EMBEDDINGS_MODE unset, nothing imports the
# embedding stack and the lexical product is unchanged. fastembed bundles a
# quantised ONNX MiniLM-class model runner (onnxruntime), so there is NO torch
# and no external API; the model is fetched once at enable time and cached.
embeddings = [
    "fastembed>=0.8,<0.9",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.15.20",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-regex>=2024.5",
    # Exercise the embeddings path in CI (the feature stays off by default at
    # runtime; the tests opt in via KB_EMBEDDINGS_MODE and skip if the model
    # cannot be fetched in the sandbox).
    "fastembed>=0.8,<0.9",
]
bench = [
    "tiktoken>=0.8",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
data-olympus-mcp = "data_olympus.server:main"
data-olympus = "data_olympus.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_olympus"]

# Ship the bin/ enforcement machinery (kb-enforce-hook dispatcher, the
# _kb_enforce.py provider registry, and the OpenCode gate plugin) INSIDE the
# wheel at data_olympus/_bin/. The `data-olympus setup` wizard resolves this
# packaged path to install per-agent enforcement hooks for a pip/uvx install
# where no repo checkout exists. `setup_wizard.bin_root()` prefers this path and
# falls back to the repo bin/ for editable dev installs.
[tool.hatch.build.targets.wheel.force-include]
"bin/kb" = "data_olympus/_bin/kb"
"bin/kb-enforce-hook" = "data_olympus/_bin/kb-enforce-hook"
"bin/_kb_enforce.py" = "data_olympus/_bin/_kb_enforce.py"
"bin/_kb_fallback.py" = "data_olympus/_bin/_kb_fallback.py"
"bin/_kb_detect_workspace.sh" = "data_olympus/_bin/_kb_detect_workspace.sh"
"bin/opencode/data-olympus-gate.ts" = "data_olympus/_bin/opencode/data-olympus-gate.ts"

# The sdist must carry bin/ so `uv build` from a clean checkout can produce the
# wheel above. hatchling includes tracked files by default; make it explicit.
[tool.hatch.build.targets.sdist]
include = [
    "src/data_olympus",
    "bin",
    "README.md",
    "LICENSE",
    "NOTICE",
    "SPEC.md",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG", "SIM", "TCH", "RET"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src", "."]
